fix: scrollbar gutter

--- a/src/web/hippo-booking/src/styles/global.scss
+++ b/src/web/hippo-booking/src/styles/global.scss
@@ -46,6 +46,7 @@
 
 html {
   height: 100%;
+  scrollbar-gutter: stable;
 }
 
 body {
